# audioclass

./: .gitignore  404.html  CONTRIBUTING.md  LICENCE  Makefile  README.md  index.html  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: coverage.yml  docs.yml  publish.yml  test.yml
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
docs/: introduction.md  usage_guide.md
docs/reference/: batch.md  constants.md  postprocess.md  preprocess.md  utils.md
docs/reference/batch/: base.md  index.md  process.md  simple.md  tensorflow.md
docs/reference/models/: base.md  birdnet.md  birdnet_analyzer.md  index.md  perch.md  tensorflow.md  tflite.md
getting_started/: index.html
reference/batch/: index.html
reference/batch/base/: index.html
reference/batch/process/: index.html
reference/batch/simple/: index.html
reference/batch/tensorflow/: index.html
reference/constants/: index.html
reference/models/: index.html
reference/models/base/: index.html
reference/models/birdnet/: index.html
reference/models/birdnet_analyzer/: index.html
reference/models/perch/: index.html
reference/models/tensorflow/: index.html
reference/models/tflite/: index.html
reference/postprocess/: index.html
reference/preprocess/: index.html
reference/utils/: index.html
scripts/: process_directory.py
search/: search_index.json
src/audioclass/: __init__.py  batch.py  constants.py  model.py  postprocess.py  preprocess.py  process.py  utils.py
src/audioclass/batch/: __init__.py  base.py  process.py  simple.py  tensorflow.py
src/audioclass/models/: __init__.py  base.py  birdnet.py  birdnet_analyzer.py  perch.py  tensorflow.py  tflite.py
src/birdnetsnd/: __init__.py  batch.py  constants.py  model.py  postprocess.py  preprocess.py
tests/: conftest.py  test_batch.py  test_models.py  test_postprocess.py  test_preprocess.py  test_process.py  test_utils.py
tests/test_batch/: conftest.py  test_base.py  test_process.py  test_simple.py  test_tensorflow.py
tests/test_models/: test_birdnet.py  test_birdnet_analyzer.py  test_perch.py  test_tflite.py
usage_guide/: index.html
